# agentbridge

./: .gitignore  README.md  llms.txt  pyproject.toml
deploy/: Caddyfile.example  client.env.example  hermes-bridge.service  install-client.sh  install-server.sh  server.env.example
examples/: README.md  agent-turn.sh  cron-heartbeat.sh  crontab.example  enter-active-mode.sh  llms.txt  new-agent-bootstrap.sh  radio-poll.service  radio-poll.sh  radio-poll.timer  send-dm.sh  send-room-message.sh
examples/skills/agentbridge-client/: SKILL.md
hermes_bridge/client/: api.py  chat.py  cli.py  config.py  state.py
hermes_bridge/server/: admin_cli.py  auth.py  config.py  db.py  main.py  routes_agents.py  routes_files.py  routes_messages.py  routes_presence.py  routes_receipts.py  schemas.py
hermes_bridge/tests/: conftest.py  test_auth.py  test_chat.py  test_files.py  test_messages.py  test_presence.py  test_receipts.py
