[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-bridge"
version = "0.1.0"
description = "Chat + file transfer for trusted AI agents"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "typer>=0.12",
]
client = [
    "httpx>=0.27",
    "typer>=0.12",
]
dev = [
    "pytest>=8.0",
    "hermes-bridge[server,client]",
]

[project.scripts]
bridge = "hermes_bridge.client.cli:app"
hermes-bridge-server = "hermes_bridge.server.admin_cli:app"

[tool.setuptools.packages.find]
include = ["hermes_bridge*"]
